src/objects/CCF_Request_Supplier__c.object
<CustomObject>
    <description>CCF Request Application</description>
    <fields>
        <fullName>Business_System__c</fullName>
        <label>Business System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_System</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Supplier_Tier_Status__c</fullName>
        <label>Contract Supplier Tier Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_CCF</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Clause_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Penalty Clause Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Code_Zip__c</fullName>
        <label>Post Code/Zip</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_State__c</fullName>
        <label>Region/State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRM_Critical_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRM Critical Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Code__c</fullName>
        <label>Supplier Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Email_CC_list__c</fullName>
        <label>Supplier Contact Email CC list </label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Email_To_list__c</fullName>
        <label>Supplier Contact Email To list</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Digital_Signature_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Digital Signature Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Risk_Rating__c</fullName>
        <label>Supplier Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCF_Supplier_Risk_Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_USQS_Compliant__c</fullName>
        <label>Supplier USQS Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CCF Supplier</label>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>